deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: simple-deployment
spec:
    replicas: 2
    selector:
       matchLabels:
          app: simple-app
    template:
       metadata:
          labels:
             app: simple-app
       spec:
          containers:
          - name: simple
            image: zroom2/simple_app:1.0.0
            ports:
              - name: web
                containerPort: 8000
            readinessProbe:
              httpGet:
                port: 8000
                path: /health
              initialDelaySeconds: 10
              periodSeconds: 10
