ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: arch.homework
    http:
      paths:
        - path: /(.*)
          pathType: Prefix
          backend:
            service:
              name: simple-service
              port:
                number: 8000
