ingress_improve.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rewrite-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: arch.homework
    http:
      paths:
        - path: /otusapp/(\w+)/(.*)
          pathType: Prefix
          backend:
            service:
              name: simple-service
              port:
                number: 8000
